@@ -1,5 +1,6 @@
 0.10.1
  - fix: handle bytes-values in HDF5 attributes
+ - ref: correctly introduce `requires_background_correction` for segmenters
 0.10.0
  - enh: some minor improvements in efficiency
  - ref: increment DCNUM_PPID_GENERATION for the sake of clarity
